# PhonebookApplication

./: CMakeLists.txt  README.md
data/: contacts.txt
docs/: DESIGN.md  INSTALL.md
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: Contact.h  ContactBST.h
scripts/: build.sh  run.sh  test.sh
src/: Contact.cpp  Contact.h  ContactBST.cpp  main.cpp
tests/: test_contact.cpp  test_contactBST.cpp
